# nautilus-git

./: .editorconfig  .gitignore  README.md  git.py  meson.build  meson_options.txt  meson_post_install.py  meson_post_install.sh  uninstall.sh  update_po.sh
data/: meson.build  nautilus-git.gresource.xml  nautilus-git.metainfo.xml  nautilus-git.metainfo.xml.in
data/icons/: meson.build
data/ui/: branch.ui  compare.ui  location.ui  page.ui  property.ui
nautilus-git/: git.py  git.py.in  nautilus-git.py.in
nemo-git/: git.py.in  nemo-git.py.in
po/: LINGUAS  POTFILES  POTFILES.in  de.po  es.mo  es.po  hu.po  meson.build  nautilus-git.pot  uk.po
src/: git_utils.py  utils.py
src/models/: git.py  watchdog.py
src/widgets/: branch.py  compare.py  location.py  page.py  property.py
